RESOLVED FIXED64447
[Qt][WK2] Undelayed WorkItems are leaked after execution.
https://bugs.webkit.org/show_bug.cgi?id=64447
Summary [Qt][WK2] Undelayed WorkItems are leaked after execution.
Andreas Kling
Reported 2011-07-13 04:38:18 PDT
SSIA
Attachments
Proposed patch (1.74 KB, patch)
2011-07-13 04:40 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2011-07-13 04:40:25 PDT
Created attachment 100653 [details] Proposed patch
Benjamin Poulain
Comment 2 2011-07-13 05:28:38 PDT
Comment on attachment 100653 [details] Proposed patch Yep, looks good for those kind of item.
Andreas Kling
Comment 3 2011-07-13 05:32:36 PDT
Comment on attachment 100653 [details] Proposed patch Clearing flags on attachment: 100653 Committed r90907: <http://trac.webkit.org/changeset/90907>
Andreas Kling
Comment 4 2011-07-13 05:32:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.