[Qt][WK2] Undelayed WorkItems are leaked after execution. https://bugs.webkit.org/show_bug.cgi?id=64447

Reviewed by Benjamin Poulain.

* Platform/qt/WorkQueueQt.cpp:
(WorkQueue::WorkItemQt::executeAndDelete):
(WorkQueue::WorkItemQt::timerEvent):
(WorkQueue::scheduleWork):


git-svn-id: svn://svn.chromium.org/blink/trunk@90907 bbb929c8-8fbe-4397-9dbb-9b2b20218538