third_party/WebKit/Source/WebKit2/Platform/qt/WorkQueueQt.cpp
@@ -66,10 +66,15 @@ public:
             m_workItem->execute();
     }
 
+    Q_SLOT void executeAndDelete()
+    {
+        execute();
+        delete this;
+    }
+
     virtual void timerEvent(QTimerEvent*)
     {
-        execute(); 
-        delete this;
+        executeAndDelete();
     }
 
     WorkQueue* m_queue;
@@ -109,7 +114,7 @@ void WorkQueue::scheduleWork(PassOwnPtr<WorkItem> item)
 {
     WorkQueue::WorkItemQt* itemQt = new WorkQueue::WorkItemQt(this, item.leakPtr());
     itemQt->moveToThread(m_workThread);
-    QMetaObject::invokeMethod(itemQt, "execute", Qt::QueuedConnection);
+    QMetaObject::invokeMethod(itemQt, "executeAndDelete", Qt::QueuedConnection);
 }
 
 void WorkQueue::scheduleWorkAfterDelay(PassOwnPtr<WorkItem> item, double delayInSecond)
